--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -57,19 +57,19 @@
     "message": "Identity name:"
   },
   "component_IdentitiesCarousel_title_new": {
-    "message": "Add identity"
+    "message": "Add Identity"
   },
   "component_IdentityLink_title_new": {
-    "message": "Add identity"
+    "message": "Add Identity"
   },
   "component_IdentitySlideNew_title": {
-    "message": "Add identity"
+    "message": "Add Identity"
   },
   "component_IdentitySlideNew_or": {
     "message": "or"
   },
   "component_Stats_identity_one": {
-    "message": "You have $number$ identity with a total",
+    "message": "You have $number$ Identity with a",
     "placeholders": {
       "number": {
         "content": "$1"
@@ -77,7 +77,7 @@
     }
   },
   "component_Stats_identity_other": {
-    "message": "You have $number$ identities with a total",
+    "message": "You have $number$ Identities with a",
     "placeholders": {
       "number": {
         "content": "$1"
@@ -85,16 +85,16 @@
     }
   },
   "component_Stats_balance": {
-    "message": " Balance: "
+    "message": " Total Balance: "
   },
   "component_AddIdentity_label": {
-    "message": "Add identity"
+    "message": "Add Identity"
   },
   "component_AddIdentity_create": {
-    "message": "Create new identity"
+    "message": "Create new Identity"
   },
   "component_AddIdentity_import": {
-    "message": "Import identity from pre-existing phrase"
+    "message": "Import Identity from pre-existing phrase"
   },
   "component_IdentityOptions_label": {
     "message": "Identity options"
@@ -103,37 +103,37 @@
     "message": "Identity"
   },
   "component_IdentityOptions_edit": {
-    "message": "Edit identity name"
+    "message": "Edit Identity Name"
   },
   "component_IdentityOptions_forget": {
-    "message": "Forget identity"
+    "message": "Remove Identity"
   },
   "component_IdentityOptions_reset_password": {
-    "message": "Reset password"
+    "message": "Reset Password"
   },
   "component_KiltCurrency_label": {
-    "message": "Kilt coin"
+    "message": "KILT Coin"
   },
   "component_Settings_label": {
     "message": "Settings"
   },
   "component_Settings_forget": {
-    "message": "Forget current identity"
+    "message": "Forget Current Identity"
   },
   "component_Settings_reset_password": {
-    "message": "Reset password for current identity"
+    "message": "Reset Password for Current Identity"
   },
   "component_Settings_forget_saved_passwords": {
-    "message": "Require password for future transactions"
+    "message": "Require Password for Future Transactions"
   },
   "component_Settings_terms_and_conditions": {
     "message": "Terms & Conditions"
   },
   "component_Settings_access": {
-    "message": "Toggle website access"
+    "message": "Toggle Website Access"
   },
   "component_Settings_endpoint": {
-    "message": "Custom endpoint"
+    "message": "Custom Endpoint"
   },
   "component_Settings_version": {
     "message": "Version $version$",
@@ -171,7 +171,7 @@
     "message": "Your transaction is being processed"
   },
   "component_TxStatusModal_success": {
-    "message": "Your transaction was successfully sent"
+    "message": "Your transaction was successful"
   },
   "component_TxStatusModal_error": {
     "message": "Your transaction has failed"
@@ -189,7 +189,7 @@
     "message": "The password is incorrect"
   },
   "component_PasswordField_remember": {
-    "message": "Remember my password for the next 15 minutes"
+    "message": "Remember password for the next 15 minutes"
   },
   "component_UpcomingFeatureModal_info": {
     "message": "It is not yet possible to send funds. Please check sporran.org for feature releases and then ensure your extension is up to date."
@@ -201,10 +201,10 @@
     "message": "Add Identity"
   },
   "view_Welcome_noIdentities": {
-    "message": "You currently don’t have any identities.\nCreate your first identity to get started."
+    "message": "You currently don’t have any Identities.\nAdd your first Identity to get started."
   },
   "view_Welcome_hasOne": {
-    "message": "You have $number$ identity. Add another one.",
+    "message": "You have $number$ Identity. Add another one.",
     "placeholders": {
       "number": {
         "content": "$1"
@@ -212,7 +212,7 @@
     }
   },
   "view_Welcome_hasOther": {
-    "message": "You have $number$ identities. Add another one.",
+    "message": "You have $number$ Identities. Add another one.",
     "placeholders": {
       "number": {
         "content": "$1"
@@ -223,13 +223,13 @@
     "message": " I have read and agree to the "
   },
   "view_Welcome_terms": {
-    "message": "terms of use"
+    "message": "Terms & Conditions"
   },
   "view_Welcome_create": {
     "message": "Create Identity"
   },
   "view_Welcome_import": {
-    "message": "Import an identity from pre-existing phrase"
+    "message": "Import an Identity from pre-existing phrase"
   },
   "view_Warning_headline": {
     "message": "Attention!"
@@ -238,13 +238,13 @@
     "message": "The next step is very important!"
   },
   "view_Warning_explanation": {
-    "message": "Please write down your wallet’s phrase and keep it in a safe place. We recommend that you write down your backup phrase with pen and paper. The phrase must be used to restore your wallet."
+    "message": "Please write down your wallet’s phrase and keep it in a safe place. We recommend that you write down your backup phrase with pen and paper. The phrase is required to restore your Identity."
   },
   "view_Warning_emphasis_again": {
     "message": "Keep it safe, so you don’t lose\nyour assets"
   },
   "view_Warning_CTA": {
-    "message": "I understand this – go to the Phrase"
+    "message": "I understand this – go to the phrase"
   },
   "view_SaveBackupPhrase_heading": {
     "message": "My Backup Phrase"
@@ -256,7 +256,7 @@
     "message": "Check my Backup Phrase"
   },
   "view_VerifyBackupPhrase_explanation": {
-    "message": "To make sure you have written down your backup phrase correctly, sort your phrase in the right order from 1 to 12"
+    "message": "To make sure you wrote down your backup phrase accurately, sort your phrase in the correct order from 1 to 12."
   },
   "view_VerifyBackupPhrase_error": {
     "message": "Please put every word in the correct order"
@@ -268,7 +268,7 @@
     "message": "Set a new password"
   },
   "view_ImportBackupPhrase_explanation_import": {
-    "message": "To import a Sporran identity, you will need your backup phrase consisting of 12 words."
+    "message": "To import a KILT Identity, you will need your backup phrase consisting of 12 words."
   },
   "view_ImportBackupPhrase_explanation_reset": {
     "message": "In order to set a new password you have to re-enter your backup phrase"
@@ -277,7 +277,7 @@
     "message": "The entered backup phrase doesn’t exist"
   },
   "view_ImportBackupPhrase_error_mismatched_backup_phrase": {
-    "message": "This is not the backup phrase of this identity"
+    "message": "This is not the backup phrase of this Identity"
   },
   "view_ImportBackupPhrase_error_backup_phrase_length": {
     "message": "Please insert all 12 words of the backup phrase in the correct order"
@@ -289,7 +289,7 @@
     "message": "Set Identity Password"
   },
   "view_CreatePassword_explanation": {
-    "message": "You need a secure password for every identity. A strong password would look like this: "
+    "message": "You need a secure password for every Identity. A strong password looks like this: "
   },
   "view_CreatePassword_example": {
     "message": "House 12! small DOGS"
@@ -307,7 +307,7 @@
     "message": "punctuation or special characters"
   },
   "view_CreatePassword_criteria_length": {
-    "message": "12 characters in total"
+    "message": "12 characters minimum"
   },
   "view_CreatePassword_criteria_example": {
     "message": "and don’t use our example"
@@ -351,7 +351,7 @@
     "message": "Copy and send your address"
   },
   "view_ReceiveToken_identity_address": {
-    "message": "Identity Address"
+    "message": "Address"
   },
   "view_ReceiveToken_enlarge": {
     "message": "Enlarge"
@@ -360,7 +360,7 @@
     "message": "Your Identities"
   },
   "view_IdentityOverview_subtitle_one": {
-    "message": "You have $number$ identity",
+    "message": "You have $number$ Identity",
     "placeholders": {
       "number": {
         "content": "$1"
@@ -368,7 +368,7 @@
     }
   },
   "view_IdentityOverview_subtitle_other": {
-    "message": "You have $number$ identities",
+    "message": "You have $number$ Identities",
     "placeholders": {
       "number": {
         "content": "$1"
@@ -385,7 +385,7 @@
     "message": "Show Credentials"
   },
   "view_IdentityOverview_add": {
-    "message": "Add identity"
+    "message": "Add Identity"
   },
   "view_IdentityOverview_subscan": {
     "message": "View Transactions"
@@ -394,22 +394,22 @@
     "message": "Attention!"
   },
   "view_RemoveIdentity_subline": {
-    "message": "You’re about to remove your identity"
+    "message": "You’re about to remove your Identity"
   },
   "view_RemoveIdentity_address": {
-    "message": "My identity address"
+    "message": "My Identity address"
   },
   "view_RemoveIdentity_explanation": {
-    "message": "The next step will remove your identity from the browser extension. This will not delete your identity. You can add it again any time by importing your backup phrase."
+    "message": "The next step will remove your Identity from the browser extension. This will not delete your Identity. You can add it again any time by importing your backup phrase."
   },
   "view_RemoveIdentity_remove": {
-    "message": "Forget this identity"
+    "message": "Remove this Identity"
   },
   "view_SendToken_heading": {
     "message": "Send KILT Coins"
   },
   "view_SendToken_subline": {
-    "message": "Securely send some of your coins"
+    "message": "Securely send your coins"
   },
   "view_SendToken_maximum": {
     "message": "Maximum sendable amount: "
@@ -441,7 +441,7 @@
     "message": "Costs: "
   },
   "view_SendToken_all_in": {
-    "message": "All in"
+    "message": "Send All"
   },
   "view_SendToken_tip_increase": {
     "message": "Increase the tip by 1%"
@@ -458,13 +458,13 @@
     }
   },
   "view_SendToken_recipient": {
-    "message": "Paste the recipient address here"
+    "message": "Paste the recipient’s address here"
   },
   "view_SendToken_recipient_invalid": {
-    "message": "The recipient address is not properly formatted"
+    "message": "The address is invalid. Please check it again."
   },
   "view_SendToken_recipient_same": {
-    "message": "The recipient address is the same as identity address"
+    "message": "The recipient address is the same as Identity address"
   },
   "view_SendToken_CTA": {
     "message": "Review & Sign Transaction"
@@ -479,7 +479,7 @@
     "message": "Transaction Details"
   },
   "view_ReviewTransaction_recipient": {
-    "message": "send to:"
+    "message": "Send to:"
   },
   "view_ReviewTransaction_total": {
     "message": "Total: "
@@ -506,10 +506,7 @@
     "message": "Send"
   },
   "view_SignQuote_heading": {
-    "message": "Sporran"
-  },
-  "view_SignQuote_subline": {
-    "message": "Terms for Generating Credential"
+    "message": "Terms of Attestation"
   },
   "view_SignQuote_costs": {
     "message": "Credential Costs: "
@@ -518,7 +515,7 @@
     "message": "Give your credential a name:"
   },
   "view_SignQuote_password": {
-    "message": "Sign with Password:"
+    "message": "Sign with password:"
   },
   "view_SignQuote_CTA": {
     "message": "Accept"
@@ -530,10 +527,10 @@
     "message": "Your attested credential was saved:"
   },
   "view_SaveCredential_warning": {
-    "message": "Please backup your\ncredential now!"
+    "message": "Please back up your\ncredential now!"
   },
   "view_SaveCredential_CTA": {
-    "message": "Backup Credential"
+    "message": "Back Up Credential"
   },
   "view_IdentityCredentials_title": {
     "message": "Your Credentials"
@@ -578,19 +575,19 @@
     "message": "Valid"
   },
   "view_ShareCredential_password": {
-    "message": "Sign with Password:"
+    "message": "Sign with password:"
   },
   "view_ShareCredential_CTA": {
     "message": "Share"
   },
   "view_AppSettings_heading": {
-    "message": "Custom Endpoint"
-  },
-  "view_AppSettings_subline": {
-    "message": "Set custom endpoint"
+    "message": "Set Custom Endpoint"
   },
   "view_AppSettings_warning": {
-    "message": "When changing the endpoint the extension needs to close.\nJust start it again to continue."
+    "message": "When changing the endpoint, the extension needs to close.\nJust start it again to continue."
+  },
+  "view_AppSettings_attention": {
+    "message": "Attention: connecting to a malicious endpoint may expose your Identities."
   },
   "view_AppSettings_endpoint": {
     "message": "Custom endpoint"
@@ -599,13 +596,13 @@
     "message": "wss://example.org:433"
   },
   "view_AppSettings_reset": {
-    "message": "Restore default"
+    "message": "Restore Default"
   },
   "view_AuthorizeDApp_title": {
     "message": "Authorize"
   },
   "view_AuthorizeDApp_subline": {
-    "message": "An application, self-identifying as $name$ is requesting access from:",
+    "message": "An application called $name$ is requesting access from:",
     "placeholders": {
       "name": {
         "content": "$1"
@@ -613,7 +610,7 @@
     }
   },
   "view_AuthorizeDApp_warning": {
-    "message": "Only approve this request if you trust the application. Approving gives the application access to the addresses of your identities."
+    "message": "Only approve this request if you trust the application. Approving gives the application access to the addresses of your Identities."
   },
   "view_AuthorizeDApp_CTA": {
     "message": "Yes, allow this application access"
@@ -657,13 +654,13 @@
     "message": "Reject"
   },
   "view_SignDApp_CTA": {
-    "message": "Sign the transaction"
+    "message": "Sign the Transaction"
   },
   "view_ExternalAccess_heading": {
     "message": "Website Access"
   },
   "view_ExternalAccess_subline": {
-    "message": "Control which websites have access to names and addresses of your identities"
+    "message": "Control which websites can access your Identity names and addresses"
   },
   "view_ExternalAccess_small": {
     "message": "Website access"
@@ -675,22 +672,22 @@
     "message": "allowed"
   },
   "view_ExternalAccess_back": {
-    "message": "Back to my identities"
+    "message": "Back to My Identities"
   },
   "view_ExistentialWarning_headline": {
     "message": "Attention"
   },
   "view_ExistentialWarning_subline": {
-    "message": "Your identity’s remaining balance will be set to zero"
+    "message": "Your Identity’s remaining balance will be set to zero"
   },
   "view_ExistentialWarning_warning": {
-    "message": "This transaction would leave your balance below the existential deposit. Therefore the balance of your identity will be set to zero. The rest of your balance will be added as a tip. Confirm to proceed with this transaction anyway."
+    "message": "This transaction would leave your balance below the existential deposit. Therefore the balance of your Identity will be set to zero. The rest of your balance will be added as a tip. Confirm to proceed with this transaction anyway."
   },
   "view_ExistentialWarning_confirm": {
     "message": "Confirm"
   },
   "view_GenericError_message": {
-    "message": "An error occurred. Please try again. For help please contact <a href='mailto:support@sporran.org'>support@sporran.org</a>."
+    "message": "An error occurred; please try again. For help please contact  <a href='mailto:support@sporran.org'>support@sporran.org</a>."
   },
   "view_UnlockVestedFunds_heading": {
     "message": "Update Balance"
