SK-331: More text updates

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -192,7 +192,7 @@
     "message": "Remember password for the next 15 minutes"
   },
   "component_UpcomingFeatureModal_info": {
-    "message": "It is not yet possible to send funds. Please check sporran.org for feature releases and then ensure your extension is up to date."
+    "message": "It is not yet possible to transfer KILT Coins via the KILT blockchain. Please visit <a href='https://sporran.org/' target='_blank' rel='noreferrer'>sporran.org</a> to check whether this functionality is live, then ensure your extension is up-to-date."
   },
   "view_Welcome_heading": {
     "message": "Welcome to your Sporran"
