--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -715,5 +715,34 @@
   },
   "view_UnlockVestedFunds_CTA": {
     "message": "Update Balance"
+  },
+  "view_DidUpgrade_heading": {
+    "message": "Upgrade to on-chain DID"
+  },
+  "view_DidUpgrade_subline": {
+    "message": "Sign upgrade"
+  },
+  "view_DidUpgrade_total": {
+    "message": "Total cost: "
+  },
+  "view_DidUpgrade_deposit": {
+    "message": " Deposit "
+  },
+  "view_DidUpgrade_fee": {
+    "message": " + fee "
+  },
+  "view_DidUpgrade_info": {
+    "message": "Upgrade information"
+  },
+  "view_DidUpgrade_CTA": {
+    "message": "Sign"
+  },
+  "view_DidUpgrade_insufficientFunds": {
+    "message": "You need at least $cost$ KILTs to upgrade",
+    "placeholders": {
+      "cost": {
+        "content": "$1"
+      }
+    }
   }
 }
