--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -758,7 +758,7 @@
     "message": "Upgrading enables you to sign with your on-chain DID and use new functionality."
   },
   "view_DidExplainer_deposit": {
-    "message": "To store your DID on the blockchain, a deposit needs to be paid. The deposit will be refunded if you remove your on-chain DID."
+    "message": "To store your DID on the blockchain, a deposit needs to be reserved. The deposit will be refunded if you remove your on-chain DID."
   },
   "view_DidExplainer_CTA": {
     "message": "Upgrade"
