--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -111,6 +111,9 @@
   "component_IdentityOptions_reset_password": {
     "message": "Reset Password"
   },
+  "component_IdentityOptions_did_downgrade": {
+    "message": "Remove on-chain DID"
+  },
   "component_KiltCurrency_label": {
     "message": "KILT Coin"
   },
@@ -748,19 +751,19 @@
       }
     }
   },
-  "view_DidExplainer_heading": {
+  "view_DidUpgradeExplainer_heading": {
     "message": "Decentralized Identifier"
   },
-  "view_DidExplainer_subline": {
+  "view_DidUpgradeExplainer_subline": {
     "message": "Upgrade to an on-chain DID"
   },
-  "view_DidExplainer_functionality": {
+  "view_DidUpgradeExplainer_functionality": {
     "message": "Upgrading enables you to sign with your on-chain DID and use new functionality."
   },
-  "view_DidExplainer_deposit": {
+  "view_DidUpgradeExplainer_deposit": {
     "message": "To store your DID on the blockchain, a deposit needs to be reserved. The deposit will be refunded if you remove your on-chain DID."
   },
-  "view_DidExplainer_CTA": {
+  "view_DidUpgradeExplainer_CTA": {
     "message": "Upgrade"
   },
   "component_DidUpgradeModal_pending": {
