Tx status messages

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -751,6 +751,15 @@
       }
     }
   },
+  "view_DidUpgrade_pending": {
+    "message": "Upgrade to on-chain is being processed"
+  },
+  "view_DidUpgrade_success": {
+    "message": "Upgrade to on-chain was successful"
+  },
+  "view_DidUpgrade_error": {
+    "message": "Upgrade to on-chain failed"
+  },
   "view_DidDowngrade_heading": {
     "message": "Remove on-chain DID"
   },
@@ -779,6 +788,15 @@
         "content": "$1"
       }
     }
+  },
+  "view_DidDowngrade_pending": {
+    "message": "Remove on-chain DID is being processed"
+  },
+  "view_DidDowngrade_success": {
+    "message": "Remove on-chain DID was successful"
+  },
+  "view_DidDowngrade_error": {
+    "message": "Remove on-chain DID failed"
   },
   "view_DidUpgradeExplainer_heading": {
     "message": "Decentralized Identifier"
@@ -809,24 +827,6 @@
   },
   "view_DidDowngradeExplainer_CTA": {
     "message": "Continue"
-  },
-  "component_DidUpgradeModal_pending": {
-    "message": "Upgrade to on-chain is being processed"
-  },
-  "component_DidUpgradeModal_success": {
-    "message": "Upgrade to on-chain was successful"
-  },
-  "component_DidUpgradeModal_error": {
-    "message": "Upgrade to on-chain failed"
-  },
-  "component_DidDowngradeModal_pending": {
-    "message": "Remove on-chain DID is being processed"
-  },
-  "component_DidDowngradeModal_success": {
-    "message": "Remove on-chain DID was successful"
-  },
-  "component_DidDowngradeModal_error": {
-    "message": "Remove on-chain DID failed"
   },
   "view_SignDid_title": {
     "message": "Sign with on-chain DID"
