SK-555: Manage DID link

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -400,7 +400,7 @@
     "message": "Upgrade to on-chain DID"
   },
   "view_IdentityOverview_on_chain": {
-    "message": "On-chain DID"
+    "message": "Manage on-chain DID"
   },
   "view_RemoveIdentity_heading": {
     "message": "Attention!"
