--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -111,9 +111,6 @@
   "component_IdentityOptions_reset_password": {
     "message": "Reset Password"
   },
-  "component_IdentityOptions_did_downgrade": {
-    "message": "Remove on-chain DID"
-  },
   "component_KiltCurrency_label": {
     "message": "KILT Coin"
   },
@@ -203,6 +200,22 @@
   "component_CredentialCard_collapse": {
     "message": "Collapse credential details"
   },
+  "component_YouHaveIdentities_one": {
+    "message": "You have $number$ Identity",
+    "placeholders": {
+      "number": {
+        "content": "$1"
+      }
+    }
+  },
+  "component_YouHaveIdentities_other": {
+    "message": "You have $number$ Identities",
+    "placeholders": {
+      "number": {
+        "content": "$1"
+      }
+    }
+  },
   "view_Welcome_heading": {
     "message": "Welcome to your Sporran"
   },
@@ -212,21 +225,8 @@
   "view_Welcome_noIdentities": {
     "message": "You currently don’t have any Identities.\nAdd your first Identity to get started."
   },
-  "view_Welcome_hasOne": {
-    "message": "You have $number$ Identity. Add another one.",
-    "placeholders": {
-      "number": {
-        "content": "$1"
-      }
-    }
-  },
-  "view_Welcome_hasOther": {
-    "message": "You have $number$ Identities. Add another one.",
-    "placeholders": {
-      "number": {
-        "content": "$1"
-      }
-    }
+  "view_Welcome_addAnother": {
+    "message": ". Add another one."
   },
   "view_Welcome_agree": {
     "message": " I have read and agree to the "
@@ -367,22 +367,6 @@
   },
   "view_IdentityOverview_title": {
     "message": "Your Identities"
-  },
-  "view_IdentityOverview_subtitle_one": {
-    "message": "You have $number$ Identity",
-    "placeholders": {
-      "number": {
-        "content": "$1"
-      }
-    }
-  },
-  "view_IdentityOverview_subtitle_other": {
-    "message": "You have $number$ Identities",
-    "placeholders": {
-      "number": {
-        "content": "$1"
-      }
-    }
   },
   "view_IdentityOverview_send": {
     "message": "Send"
@@ -815,6 +799,18 @@
   },
   "view_DidDowngradeExplainer_CTA": {
     "message": "Continue"
+  },
+  "view_DidManage_heading": {
+    "message": "Manage DID"
+  },
+  "view_DidManage_endpoints": {
+    "message": "Service endpoints"
+  },
+  "view_DidManage_connect": {
+    "message": "Connect to Dotsama address"
+  },
+  "view_DidManage_downgrade": {
+    "message": "Remove on-chain DID"
   },
   "view_SignDid_title": {
     "message": "Sign with on-chain DID"
