--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -200,6 +200,9 @@
   "component_UpcomingFeatureModal_info": {
     "message": "It is not yet possible to transfer KILT Coins via the KILT blockchain. Please visit <a href='https://sporran.org/' target='_blank' rel='noreferrer'>sporran.org</a> to check whether this functionality is live, then ensure your extension is up-to-date."
   },
+  "component_CredentialCard_collapse": {
+    "message": "Collapse credential details"
+  },
   "view_Welcome_heading": {
     "message": "Welcome to your Sporran"
   },
