SK-594: No to a few credentials

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -579,6 +579,12 @@
   "view_IdentityCredentials_subline": {
     "message": "View and manage your credentials"
   },
+  "view_IdentityCredentials_no_credentials": {
+    "message": ":(\nno credentials\navailable"
+  },
+  "view_IdentityCredentials_explainer": {
+    "message": "How To Get Credentials"
+  },
   "view_ShareCredential_share": {
     "message": "Share credential"
   },
