--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -233,6 +233,15 @@
   "component_CredentialCard_revoked": {
     "message": "Revoked"
   },
+  "component_CredentialCard_delete_warning": {
+    "message": "Do you really want to delete this credential?"
+  },
+  "component_CredentialCard_delete_explanation": {
+    "message": "If you have created a backup of this credential, you can restore it at any time."
+  },
+  "component_CredentialCard_delete_confirm": {
+    "message": "Yes, Delete This Credential"
+  },
   "component_ShareCredentialCard_required": {
     "message": "* required"
   },
